cyclonedx-bom/src/specs/v1_4/snapshots/cyclonedx_bom__specs__v1_4__license__test__it_should_handle_licenses_correctly_license_choice_expressions.snap
---
source: cyclonedx-bom/src/specs/v1_4/license.rs
expression: actual
---
[
  {
    "expression": "expression"
  },
  {
    "expression": "expression"
  }
]
