cyclonedx-bom/src/specs/v1_4/snapshots/cyclonedx_bom__specs__v1_4__license__test__it_should_handle_licenses_correctly_license_choice_licenses.snap
---
source: cyclonedx-bom/src/specs/v1_4/license.rs
expression: actual
---
[
  {
    "license": {
      "id": "spdx id",
      "text": {
        "contentType": "content type",
        "encoding": "encoding",
        "content": "content"
      },
      "url": "url"
    }
  },
  {
    "license": {
      "name": "name",
      "text": {
        "contentType": "content type",
        "encoding": "encoding",
        "content": "content"
      },
      "url": "url"
    }
  }
]
