cyclonedx-bom/src/specs/v1_4/snapshots/cyclonedx_bom__specs__v1_4__license__test__it_should_write_licenses_without_license_choices_correctly.snap
---
source: cyclonedx-bom/src/specs/v1_4/license.rs
expression: xml_output
---
<?xml version="1.0" encoding="utf-8"?>
<licenses />
